feat(java): remove unsafe requirement on jdk25