@@ -377,32 +377,41 @@
                         includeantruntime="false"
                         debug="true"
                         release="22">
+                      <include name="org/**/*.java"/>
                       <classpath refid="jdk25.compile.classpath"/>
+                      <compilerarg value="-sourcepath"/>
+                      <compilerarg value=""/>
                     </javac>
-                  </target>
-                </configuration>
-              </execution>
-              <execution>
-                <id>prepare-jdk25-test-classes</id>
-                <phase>process-test-classes</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <target>
-                    <property
-                        name="jdk25.test.classes.dir"
-                        value="${project.build.directory}/jdk25-test-classes"/>
-                    <delete dir="${jdk25.test.classes.dir}"/>
-                    <mkdir dir="${jdk25.test.classes.dir}"/>
-                    <copy todir="${jdk25.test.classes.dir}">
-                      <fileset dir="${project.build.outputDirectory}">
-                        <exclude name="META-INF/versions/**"/>
-                      </fileset>
-                    </copy>
-                    <copy todir="${jdk25.test.classes.dir}" overwrite="true">
-                      <fileset dir="${project.build.outputDirectory}/META-INF/versions/25"/>
-                    </copy>
+                    <path id="jdk25.module.path">
+                      <pathelement
+                          location="${user.home}/.m2/repository/org/slf4j/slf4j-api/${slf4j.version}/slf4j-api-${slf4j.version}.jar"/>
+                      <pathelement
+                          location="${user.home}/.m2/repository/com/google/guava/guava/${guava.version}/guava-${guava.version}.jar"/>
+                      <pathelement
+                          location="${user.home}/.m2/repository/com/google/code/findbugs/jsr305/${jsr305.version}/jsr305-${jsr305.version}.jar"/>
+                      <path refid="maven.compile.classpath"/>
+                    </path>
+                    <pathconvert property="jdk25.compile.module.path" refid="jdk25.module.path"
+                                 pathsep="${path.separator}"/>
+                    <javac srcdir="${project.basedir}/src/main/java25"
+                           destdir="${jdk25.classes.dir}"
+                           includeantruntime="false"
+                           fork="true"
+                           executable="${java.home}/bin/javac"
+                           debug="true">
+                      <include name="module-info.java"/>
+                      <compilerarg value="--source"/>
+                      <compilerarg value="22"/>
+                      <compilerarg value="--target"/>
+                      <compilerarg value="22"/>
+                      <compilerarg value="--module-path"/>
+                      <compilerarg path="${jdk25.compile.module.path}"/>
+                      <compilerarg value="--add-modules"/>
+                      <compilerarg value="jdk.incubator.vector"/>
+                      <compilerarg value="--patch-module"/>
+                      <compilerarg
+                          value="org.apache.fory.core=${project.build.outputDirectory}${path.separator}${jdk25.classes.dir}"/>
+                    </javac>
                   </target>
                 </configuration>
               </execution>
@@ -433,10 +442,13 @@
                             name="META-INF/versions/25/org/apache/fory/platform/internal/_JDKAccess.class"/>
                         <include name="META-INF/versions/25/org/apache/fory/platform/internal/DefineClass.class"/>
                         <include name="META-INF/versions/25/org/apache/fory/platform/internal/_Lookup.class"/>
-                        <include name="META-INF/versions/25/org/apache/fory/reflect/FieldAccessor.class"/>
+                        <include name="META-INF/versions/25/org/apache/fory/builder/UnsafeCodegenSupport.class"/>
+                        <include name="META-INF/versions/25/org/apache/fory/reflect/FieldAccessorStrategy.class"/>
                         <include
                             name="META-INF/versions/25/org/apache/fory/reflect/HiddenFieldAccessorFactory.class"/>
+                        <include name="META-INF/versions/25/org/apache/fory/reflect/UnsafeObjectAllocator.class"/>
                         <include name="META-INF/versions/25/org/apache/fory/serializer/PlatformStringUtils.class"/>
+                        <include name="META-INF/versions/25/module-info.class"/>
                       </patternset>
                     </unzip>
                     <available
@@ -461,14 +473,23 @@
                         file="${jdk25.mrjar.check.dir}/META-INF/versions/25/org/apache/fory/platform/internal/_Lookup.class"
                         property="jdk25.lookup.present"/>
                     <available
-                        file="${jdk25.mrjar.check.dir}/META-INF/versions/25/org/apache/fory/reflect/FieldAccessor.class"
-                        property="jdk25.fieldaccessor.present"/>
+                        file="${jdk25.mrjar.check.dir}/META-INF/versions/25/org/apache/fory/builder/UnsafeCodegenSupport.class"
+                        property="jdk25.builder.unsafecodegen.present"/>
+                    <available
+                        file="${jdk25.mrjar.check.dir}/META-INF/versions/25/org/apache/fory/reflect/FieldAccessorStrategy.class"
+                        property="jdk25.fieldaccessorstrategy.present"/>
                     <available
                         file="${jdk25.mrjar.check.dir}/META-INF/versions/25/org/apache/fory/reflect/HiddenFieldAccessorFactory.class"
                         property="jdk25.hiddenfieldaccessorfactory.present"/>
                     <available
+                        file="${jdk25.mrjar.check.dir}/META-INF/versions/25/org/apache/fory/reflect/UnsafeObjectAllocator.class"
+                        property="jdk25.unsafeobjectallocator.present"/>
+                    <available
                         file="${jdk25.mrjar.check.dir}/META-INF/versions/25/org/apache/fory/serializer/PlatformStringUtils.class"
                         property="jdk25.platformstring.present"/>
+                    <available
+                        file="${jdk25.mrjar.check.dir}/META-INF/versions/25/module-info.class"
+                        property="jdk25.moduleinfo.present"/>
                     <fail
                         if="jdk25.root.unsafeops.present"
                         message="Root UnsafeOps class must not be packaged in fory-core."/>
@@ -491,14 +512,23 @@
                         unless="jdk25.lookup.present"
                         message="JDK25 multi-release _Lookup class is missing from the packaged fory-core jar."/>
                     <fail
-                        unless="jdk25.fieldaccessor.present"
-                        message="JDK25 multi-release FieldAccessor class is missing from the packaged fory-core jar."/>
+                        unless="jdk25.builder.unsafecodegen.present"
+                        message="JDK25 multi-release UnsafeCodegenSupport class is missing from the packaged fory-core jar."/>
+                    <fail
+                        unless="jdk25.fieldaccessorstrategy.present"
+                        message="JDK25 multi-release FieldAccessorStrategy class is missing from the packaged fory-core jar."/>
                     <fail
                         unless="jdk25.hiddenfieldaccessorfactory.present"
                         message="JDK25 multi-release HiddenFieldAccessorFactory class is missing from the packaged fory-core jar."/>
                     <fail
+                        unless="jdk25.unsafeobjectallocator.present"
+                        message="JDK25 multi-release UnsafeObjectAllocator class is missing from the packaged fory-core jar."/>
+                    <fail
                         unless="jdk25.platformstring.present"
                         message="JDK25 multi-release PlatformStringUtils class is missing from the packaged fory-core jar."/>
+                    <fail
+                        unless="jdk25.moduleinfo.present"
+                        message="JDK25 multi-release module-info.class is missing from the packaged fory-core jar."/>
                   </target>
                 </configuration>
               </execution>
@@ -531,32 +561,56 @@
                       <patternset>
                         <include name="META-INF/versions/25/org/apache/fory/memory/MemoryBuffer.java"/>
                         <include
+                            name="META-INF/versions/25/org/apache/fory/builder/UnsafeCodegenSupport.java"/>
+                        <include
+                            name="META-INF/versions/25/org/apache/fory/reflect/FieldAccessorStrategy.java"/>
+                        <include
                             name="META-INF/versions/25/org/apache/fory/reflect/HiddenFieldAccessorFactory.java"/>
+                        <include
+                            name="META-INF/versions/25/org/apache/fory/reflect/UnsafeObjectAllocator.java"/>
+                        <include name="META-INF/versions/25/module-info.java"/>
                       </patternset>
                     </unzip>
                     <available
                         file="${jdk25.sources.check.dir}/META-INF/versions/25/org/apache/fory/memory/MemoryBuffer.java"
                         property="jdk25.memorybuffer.source.present"/>
                     <available
+                        file="${jdk25.sources.check.dir}/META-INF/versions/25/org/apache/fory/builder/UnsafeCodegenSupport.java"
+                        property="jdk25.builder.unsafecodegen.source.present"/>
+                    <available
+                        file="${jdk25.sources.check.dir}/META-INF/versions/25/org/apache/fory/reflect/FieldAccessorStrategy.java"
+                        property="jdk25.fieldaccessorstrategy.source.present"/>
+                    <available
                         file="${jdk25.sources.check.dir}/META-INF/versions/25/org/apache/fory/reflect/HiddenFieldAccessorFactory.java"
                         property="jdk25.hiddenfieldaccessorfactory.source.present"/>
+                    <available
+                        file="${jdk25.sources.check.dir}/META-INF/versions/25/org/apache/fory/reflect/UnsafeObjectAllocator.java"
+                        property="jdk25.unsafeobjectallocator.source.present"/>
+                    <available
+                        file="${jdk25.sources.check.dir}/META-INF/versions/25/module-info.java"
+                        property="jdk25.moduleinfo.source.present"/>
                     <fail
                         unless="jdk25.memorybuffer.source.present"
                         message="JDK25 versioned MemoryBuffer source is missing from the source jar."/>
                     <fail
+                        unless="jdk25.builder.unsafecodegen.source.present"
+                        message="JDK25 versioned UnsafeCodegenSupport source is missing from the source jar."/>
+                    <fail
+                        unless="jdk25.fieldaccessorstrategy.source.present"
+                        message="JDK25 versioned FieldAccessorStrategy source is missing from the source jar."/>
+                    <fail
                         unless="jdk25.hiddenfieldaccessorfactory.source.present"
                         message="JDK25 versioned HiddenFieldAccessorFactory source is missing from the source jar."/>
+                    <fail
+                        unless="jdk25.unsafeobjectallocator.source.present"
+                        message="JDK25 versioned UnsafeObjectAllocator source is missing from the source jar."/>
+                    <fail
+                        unless="jdk25.moduleinfo.source.present"
+                        message="JDK25 versioned module-info.java source is missing from the source jar."/>
                   </target>
                 </configuration>
               </execution>
             </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <classesDirectory>${project.build.directory}/jdk25-test-classes</classesDirectory>
-            </configuration>
           </plugin>
         </plugins>
       </build>
